--- a/README.Rmd
+++ b/README.Rmd
@@ -62,10 +62,15 @@ devtools::install_github("kijinosu/icus.data")
 
 ### Plot participant counts by year
 
-```{r, libraries, echo=FALSE}
+Load libraries.
+
+```{r, libraries, echo=TRUE}
 library(icus.data)
 library(tidyverse)
 ```
+
+Plot.
+
 ```{r, plot-participant-counts, echo=TRUE}
 ggplot(data = progs) +
   geom_bar(mapping = aes(x = Year, y = Count), stat = "identity") +
